Added some more files

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <a href="#six">6</a>
     <a href="#seven">7</a>
     <a href="#eight">8</a>
+    <a href="cite.html">Main Page</a>
     <p class="aligncenter">
         <img src="asset/one.jpeg" width="400" height="500" />
     </p>
